# LSTM-document-similarity

./: README.md  lstm.ipynb  pyproject.toml  wrong_lstm_preds.csv
data/: README.md
model-params/: README.md
