[tool.poetry]
name = "Document Similarity"
version = "0.1.0"
description = ""
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
pandas = "^1.4.2"
tensorflow = "^2.8.0"
scikit-learn = "^1.0.2"
nltk = "^3.7"
gensim = "^4.1.2"
pretty-confusion-matrix = "^0.1.1"
scikit-plot = "^0.3.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.4"
plotly = "^5.7.0"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
